# esfwx

./: .gitmodules  CMakeLists.txt  build_docs.bat  build_docs.sh  esfwx.config.cmake  esfwx.defs.cmake  esfwx_ecc25.groupproj  esfwx_ecc26.groupproj  version.h
esfwx/tag-1.12/eschart/: CMakeLists.txt  EsDsUpdateLocker.h  EsSpecDataEvent.cpp  EsSpecDataEvent.h  EsSpecDataset.cpp  EsSpecDataset.h  EsSpecView.cpp  EsSpecView.h  EsTransparentAreaDraw.cpp  EsTransparentAreaDraw.h  build.h  ekosf-chart.h  stdafx.cpp  stdafx.h
esfwx/tag-1.12/escomm/: CMakeLists.txt  CommConfigDlg.cpp  CommConfigDlg.h  CommConfigPane.cpp  CommConfigPane.h  EkonnectIoChannel.cpp  EkonnectIoChannel.h  EkonnectIoChannelConfigPane.cpp  EkonnectIoChannelConfigPane.h  EkosfRPCServices.cpp  EkosfRPCServices.h  EsCommUtils.cpp  EsCommUtils.h  EsEnumCommPorts.cpp  EsEnumCommPorts.h  EsIoChannelIntf.h  EsProtocolConfigPane.cpp  EsProtocolConfigPane.h  FtdiDriver.cpp  FtdiDriver.h  FtdiDriver.hxx  IoChannelEvent.cpp  IoChannelEvent.h  IoChannelFactory.cpp  IoChannelFactory.h  SocketClientIoChannel.cpp  SocketClientIoChannel.h  SocketClientIoChannelConfigPane.cpp  SocketClientIoChannelConfigPane.h  SocketIoAdapter.cpp  SocketIoAdapter.h  SocketServerIoChannel.cpp  SocketServerIoChannel.h  SocketServerIoChannelConfigPane.cpp  SocketServerIoChannelConfigPane.h  StubIoChannel.cpp  StubIoChannel.h  StubIoChannelConfigPane.cpp  StubIoChannelConfigPane.h  UartIoChannel.cpp  (+8 more)
esfwx/tag-1.12/escore/: CMakeLists.txt  DataFileParser.cpp  DataFileParser.h  DataFileUtils.cpp  DataFileUtils.h  DataXmlConversion.cpp  DataXmlConversion.h  Devices.cpp  Devices.h  EsAppIntf.h  EsBaseIntf.h  EsBinBuffer.cpp  EsBinBuffer.h  EsCompositeFile.cpp  EsCompositeFile.h  EsCrc.cpp  EsCrc.h  EsDateTime.cpp  EsDateTime.h  EsDictionary.cpp  EsDictionary.h  EsDictionaryCompiler.hxx  EsEvent.cpp  EsEvent.h  EsExceptions.cpp  EsExceptions.h  EsGui.cpp  EsGui.h  EsPowerStatus.cpp  EsPowerStatus.h  EsString.cpp  EsString.h  EsThread.cpp  EsThread.h  EsUtilities.cpp  EsUtilities.h  EsValidators.cpp  EsValidators.h  EsVariant.cpp  EsVariant.h  (+29 more)
esfwx/tag-1.12/esmath/: CMakeLists.txt  EsMath.cpp  EsMath.h  EsMathCubicSplineFit.cpp  EsMathCubicSplineFit.h  EsMathFitConstraint.cpp  EsMathFitConstraint.h  EsMathInternals.cpp  EsMathInternals.h  EsMathPolyFit.cpp  EsMathPolyFit.h  EsMathSpline.cpp  EsMathSpline.h  build.h  ekosf-math.h  stdafx.cpp  stdafx.h
esfwx/tag-1.12/esmcuprog/: CMakeLists.txt  EsFwMoniker.cpp  EsFwMoniker.h  McuLpcProgrammer.cpp  McuLpcProgrammer.h  McuProgrammer.cpp  McuProgrammer.h  build.h  esmcuprog.h  lpc21isp.h  lpcprog.c  lpcprog.h  stdafx.cpp  stdafx.h
esfwx/tag-1.12/esscript/: CMakeLists.txt  EsCodeSection.cpp  EsCodeSection.h  EsInstruction.cpp  EsInstruction.h  EsScope.h  EsScript.cpp  EsScript.h  EsScriptArrayObject.cpp  EsScriptArrayObject.h  EsScriptCompiler.hxx  EsScriptCompilerRuleNames.hxx  EsScriptDebug.cpp  EsScriptDebug.h  EsScriptMachine.cpp  EsScriptMachine.h  EsScriptObject.cpp  EsScriptObject.h  EsScriptPodObjects.cpp  EsScriptPodObjects.h  EsSymtable.cpp  EsSymtable.h  EsValAccessors.cpp  EsValAccessors.h  build.h  ekosf-script.h  stdafx.cpp  stdafx.h
esfwx/tag-1.12/esshell-base/: CMakeLists.txt  CustomizeShellDlg.cpp  CustomizeShellDlg.h  DataFileView.cpp  DataFileView.h  EsAboutDlg.cpp  EsAboutDlg.h  EsTimeCtrl.cpp  EsTimeCtrl.h  FrmLog.cpp  FrmLog.h  FrmMain.cpp  FrmMain.h  NotifierCtl.cpp  NotifierCtl.h  RemoteFsTree.cpp  RemoteFsTree.h  SetDateTimeDlg.cpp  SetDateTimeDlg.h  SetDateTimePane.cpp  SetDateTimePane.h  ShellApp.cpp  ShellApp.h  build.h  esshell-base.h  stdafx.cpp  stdafx.h
esfwx/tag-1.12/static-linkage/: CMakeLists.txt
esfwx/tag-1.24/: CMakeLists.txt  EsCommConfig.h  EsCoreConfig.h  EsScriptConfig.h  build_docs.bat  esframework-macros.cmake  esfwx.config.cmake  esfwx.defs.cmake  esfwx_ecc23.groupproj  esfwx_ecc24.groupproj  esfwx_ecc26.groupproj  version.h  version.h.in
esfwx/tag-1.24/compatibility-headers/: esguiConfig.h  targetConfig.h
esfwx/tag-1.24/escomm/: CMakeLists.txt  Doxyfile.in  EsBluetooth.android.cxx  EsBluetooth.cpp  EsBluetooth.h  EsBluetooth.win.cxx  EsBluetooth.win.h  EsBluetoothLE.cpp  EsBluetoothLE.h  EsBluetoothLE.win.cxx  EsBluetoothLEdescriptor.defs.h  EsChannelIoBluetoothClient.cpp  EsChannelIoBluetoothClient.h  EsChannelIoBluetoothLE.cpp  EsChannelIoBluetoothLE.h  (+62 more)
esmath/: CMakeLists.txt  Doxyfile.in  EsMathArrayComplex.cpp  EsMathArrayComplex.h  EsMathArrayReal.cpp  EsMathArrayReal.h  EsMathArrayView.h  EsMathConvolutionReal.cpp  EsMathDelayLine.cpp  EsMathDelayLine.h  EsMathException.cpp  EsMathException.h  EsMathFft.cpp  EsMathFitConstraint.cpp  EsMathFitConstraint.h  EsMathInternals.cpp  EsMathInternals.h  EsMathMain.cpp  EsMathPolyFit.cpp  EsMathSpline.cpp  EsMathSpline.h  EsMathSplineCalculator.cpp  EsMathSplineCalculator.h  EsMathSplineFit.cpp  EsMathSplineFit.h  EsMathUtils.cpp  EsMathUtils.h  EsMathWindow.cpp  EsMathWindow.h  build.h  esmath.config.cmake  esmath.h  esmath_ecc.cpp  esmath_ecc25.cbproj  esmath_ecc26.cbproj  esmath_ecc27.cbproj  esmath_ecc27s.cbproj
esmath/alglib/: alglibinternal.cpp  alglibmisc.cpp  ap.cpp  dataanalysis.cpp  diffequations.cpp  fasttransforms.cpp  integration.cpp  interpolation.cpp  linalg.cpp  optimization.cpp  solvers.cpp  specialfunctions.cpp  statistics.cpp
esmath/res/: version.rc
esmdi/: CMakeLists.txt  Doxyfile.in  EsDocument.cpp  EsDocument.h  EsDocumentManager.cpp  EsDocumentManager.h  EsDocumentManagerIntf.h  EsMdiConfig.h.in  EsMdiMain.cpp  esmdi.config.cmake  esmdi.h  esmdipch.h  i18n_xtract.bat
tests/: CMakeLists.txt  TFrmTests.cpp  TFrmTests.fmx  TFrmTests.h  autolink.cxx  cpptest-config.h  main.cpp  testBtConfig.cc  testEsBluetooth.cc  testEsCryptoAes.cc  testEsCryptoDesLegacy.cc  testEsFile.cc  testEsOsInfo.cc  testEsRegEx.cc  testEsSocket.cc  testEsSocketChannel.cc  testEsSocketServer.cc  testEsString.cc  testEsThread.cc  testMacosFile.cc  testStringInStrings.cc  tests.config.cmake  testsConfig.h.in  tests_ecc25.cbproj  tests_ecc26.cbproj
tests/test_results/: 02-02-2017-win32-release.txt
(+1068 files in other folders)
